--- a/contract/package.json
+++ b/contract/package.json
@@ -87,6 +87,7 @@
     "typechain": "cross-env TS_NODE_TRANSPILE_ONLY=true hardhat typechain"
   },
   "dependencies": {
-    "@openzeppelin/contracts": "^4.7.3"
+    "@openzeppelin/contracts": "^4.7.3",
+    "greeter": "^0.0.0"
   }
 }
